[gd_scene load_steps=24 format=3 uid="uid://dopx06yy437aa"]

[ext_resource type="Script" path="res://entities/PhysicsEntities/player/player.gd" id="1_xxrmx"]
[ext_resource type="Texture2D" uid="uid://du7415gkawk7m" path="res://assets/Commissions/Rogue.png" id="2_wmfjr"]
[ext_resource type="PackedScene" uid="uid://cert0vcaupr07" path="res://utilities/state machine/state_machine.tscn" id="3_ywb0m"]
[ext_resource type="PackedScene" uid="uid://divlo1p11l0dq" path="res://entities/PhysicsEntities/player/States/idle/idle.tscn" id="4_8ui45"]
[ext_resource type="PackedScene" uid="uid://cmj02vkwe0vdd" path="res://entities/PhysicsEntities/player/States/walk/walk.tscn" id="5_kwbrq"]
[ext_resource type="PackedScene" uid="uid://bwh8l57nscl0k" path="res://entities/PhysicsEntities/player/States/attack/attack.tscn" id="6_lu07g"]
[ext_resource type="PackedScene" uid="uid://dhd8fd2ahwg6n" path="res://entities/PhysicsEntities/player/States/dash/dash.tscn" id="7_bvkjf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ecgh"]
size = Vector2(12, 10)

[sub_resource type="Animation" id="Animation_ttp1g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attackHitbox/attackHitboxCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attackHitbox/attackHitboxCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 11)]
}

[sub_resource type="Animation" id="Animation_x7naw"]
resource_name = "down_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attackHitbox/attackHitboxCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attackHitbox/attackHitboxCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 11)]
}

[sub_resource type="Animation" id="Animation_554b2"]
resource_name = "down_idle"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qw1e8"]
resource_name = "down_walk"
length = 1.3333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333334, 0.666667, 1.03333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_t84f4"]
resource_name = "left_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attackHitbox/attackHitboxCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attackHitbox/attackHitboxCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7.75, 2)]
}

[sub_resource type="Animation" id="Animation_gk4fi"]
resource_name = "left_idle"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_r6n6t"]
resource_name = "left_walk"
length = 1.3333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.366666, 0.733336, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 4]
}

[sub_resource type="Animation" id="Animation_4ddtr"]
resource_name = "right_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attackHitbox/attackHitboxCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attackHitbox/attackHitboxCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.875, 2)]
}

[sub_resource type="Animation" id="Animation_tpuv5"]
resource_name = "right_idle"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_vfxeo"]
resource_name = "right_walk"
length = 1.3333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333334, 0.666667, 1.03333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 8]
}

[sub_resource type="Animation" id="Animation_ipr5t"]
resource_name = "up_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attackHitbox/attackHitboxCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("attackHitbox/attackHitboxCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -11.0781)]
}

[sub_resource type="Animation" id="Animation_jo0fm"]
resource_name = "up_idle"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_54m5m"]
resource_name = "up_walk"
length = 1.3333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.366667, 0.7, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjfnm"]
_data = {
"RESET": SubResource("Animation_ttp1g"),
"down_attack": SubResource("Animation_x7naw"),
"down_idle": SubResource("Animation_554b2"),
"down_walk": SubResource("Animation_qw1e8"),
"left_attack": SubResource("Animation_t84f4"),
"left_idle": SubResource("Animation_gk4fi"),
"left_walk": SubResource("Animation_r6n6t"),
"right_attack": SubResource("Animation_4ddtr"),
"right_idle": SubResource("Animation_tpuv5"),
"right_walk": SubResource("Animation_vfxeo"),
"up_attack": SubResource("Animation_ipr5t"),
"up_idle": SubResource("Animation_jo0fm"),
"up_walk": SubResource("Animation_54m5m")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_olio6"]
size = Vector2(2.9375, 3)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_xxrmx")

[node name="wallCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_1ecgh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wmfjr")
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qjfnm")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
position_smoothing_enabled = true

[node name="StateMachine" parent="." node_paths=PackedStringArray("startingState") instance=ExtResource("3_ywb0m")]
startingState = NodePath("idle")

[node name="idle" parent="StateMachine" node_paths=PackedStringArray("walk", "attack") instance=ExtResource("4_8ui45")]
walk = NodePath("../walk")
attack = NodePath("../attack")
animationName = "down_idle"

[node name="walk" parent="StateMachine" node_paths=PackedStringArray("idle", "attack", "dash") instance=ExtResource("5_kwbrq")]
idle = NodePath("../idle")
attack = NodePath("../attack")
dash = NodePath("../dash")
animationName = "down_walk"

[node name="attack" parent="StateMachine" node_paths=PackedStringArray("idle", "walk") instance=ExtResource("6_lu07g")]
idle = NodePath("../idle")
walk = NodePath("../walk")

[node name="dash" parent="StateMachine" node_paths=PackedStringArray("walk") instance=ExtResource("7_bvkjf")]
walk = NodePath("../walk")

[node name="attackHitbox" type="Area2D" parent="."]
collision_layer = 3

[node name="attackHitboxCollision" type="CollisionShape2D" parent="attackHitbox"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_olio6")
debug_color = Color(0.992157, 0, 0.101961, 0.419608)

[node name="dashCooldown" type="Timer" parent="."]
wait_time = 0.7

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/attack" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/dash" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="dashCooldown" to="." method="_on_dash_cooldown_timeout"]
